--- a/GradTTS/config/ESD/model_gradTTS.yaml
+++ b/GradTTS/config/ESD/model_gradTTS.yaml
@@ -1,7 +1,7 @@
 encoder:
-  n_enc_channels: 192
-  filter_channels: 768
-  filter_channels_dp: 256
+  n_enc_channels: 128    # origin: 192
+  filter_channels: 256   # origin: 768
+  filter_channels_dp: 256  # origin: 256
   n_enc_layers: 6
   enc_kernel: 3
   enc_dropout: 0.1
