--- a/GradTTS/config/ESD/model_gradTTS_v3.yaml
+++ b/GradTTS/config/ESD/model_gradTTS_v3.yaml
@@ -1,7 +1,3 @@
-# Compared to model_gradTTS.yaml
-# No joint training
-# Attn dim from 128 -> 64
-# Used frame2bin
 encoder:
   n_enc_channels: 128    # origin: 192
   filter_channels: 128   # origin: 768
@@ -14,7 +10,7 @@ encoder:
   length_scale: 1.0 # speech pace
 
 decoder:
-  sample_channel_n: 2  # LinearAttn: 3/4, CrossAttn: 1, CrossAttn_Classifier_free: 2/1
+  sample_channel_n: 2  # LinearAttn: 3, CrossAttn: 1, CrossAttn_Classifier_free: 2
   dec_dim: 64
   beta_min: 0.05
   beta_max: 20.0
@@ -26,11 +22,11 @@ decoder:
 unet:
   unet_type: "origin"  # origin or diffuser
   att_type: "cross"   # linear or crossAtt
-  att_gran: "frame2frame"  # bin2frame or phone2frame
-  att_dim: 64
+  att_gran: "frame2bin"  # bin2frame or phone2frame
+  att_dim: 128
   heads: 4
-  p_uncond: 0.0    # 0 or 0.3
-  guidence_strength: 3 # only for inference
+  p_uncond: 0.0
+  guidence_strength: 3
 
 spk_emb_dim: 64
 emo_emb_dim: 5
