--- a/GradTTS/config/ESD/train_gradTTS.yaml
+++ b/GradTTS/config/ESD/train_gradTTS.yaml
@@ -1,11 +1,12 @@
 path:
   ckpt_path: "./output/ckpt/ESD"
   # interpEmoTTS_frame2frameAttn, interpEmoTTS_linearAttn, interpEmoTTS_frame2frameAttn_noJoint
-  log_dir: "./logs/interpEmoTTS_frame2frameAttn_noJoint/" # for training
+  log_dir: "./logs/interpEmoTTS_frame2binAttn_noJoint/" # for training
+  #log_dir: "/home/acc12642fx/project/Speech-Backbones/GradTTS/logs/interpEmoTTS_frame2binAttn_noJoint/" # for training
   result_path: "./output/result/ESD"
 # train
 n_epochs: 1000
-resume_epoch: 68  # 116 for linear, 65 for .._nojoint
+resume_epoch: 0  # 116 for linear, 65 for .._nojoint
 batch_size: 48
 learning_rate: 1e-4
 seed: 37
