--- a/GradTTS/config/ESD/train_styleAlignedTTS.yaml
+++ b/GradTTS/config/ESD/train_styleAlignedTTS.yaml
@@ -5,13 +5,13 @@
 path:
   ckpt_path: "./output/ckpt/ESD"
   # interpEmoTTS_frame2frameAttn, interpEmoTTS_linearAttn, interpEmoTTS_frame2frameAttn_noJoint
-  log_dir: "./logs/styleEnhancedTTS_stdit/" # for training
+  log_dir: "./logs/styleEnhancedTTS_stditMocha_guideloss_codec/" # for training   stditTest/stditMocha_norm
   #log_dir: "/home/acc12642fx/project/Speech-Backbones/GradTTS/logs/interpEmoTTS_frame2binAttn_noJoint/" # for training
   result_path: "./output/result/ESD"
 # train
 n_epochs: 1000
-resume_epoch: 0  # 116 for linear, 65 for .._nojoint
-batch_size: 48
+resume_epoch: 80  # 116 for linear, 65 for .._nojoint  800 for stdit
+batch_size: 64     # 64, 2
 learning_rate: 1e-4
 seed: 37
 
@@ -23,26 +23,8 @@ test_size: 3
 
 
 # save model
-save_every: 1
-
-# ---------------not used-------------
-optimizer:
-  batch_size: 16
-  betas: [0.9, 0.98]
-  eps: 0.000000001
-  weight_decay: 0.0
-  grad_clip_thresh: 1.0
-  grad_acc_step: 1
-  warm_up_step: 4000
-  anneal_steps: [300000, 400000, 500000]
-  anneal_rate: 0.3
-step:
-  total_step: 900000
-  log_step: 100
-  synth_step: 100
-  val_step: 100
-  save_step: 3000
-
+save_every: 5
+show_img_per_epoch: 5.0
 
 
 # log_dir
