--- a/GradTTS/config/ESD/preprocess_stditCross.yaml
+++ b/GradTTS/config/ESD/preprocess_stditCross.yaml
@@ -51,7 +51,7 @@ preprocessing:
     text_cleaners: ["english_cleaners"]
     language: "en"
   audio:
-    sampling_rate: 16000
+    sampling_rate: 22050  # 16000
     max_wav_value: 32768.0
   stft:
     filter_length: 1024
